<resources>
    <string name="app_name">AndroidEatit</string>
    <string name="textview">No matter where you are: whether you are at home, or in the office, or on the beach - we you find you and we will feed you</string>
    <string name="imageView">Logo</string>
    <string name="buttonSignUp">SIGN UP</string>
    <string name="buttonSignIn">SIGN IN</string>
    <string name="editTextPhoneNo">Phone number</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextName">Name</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="IconMenu">Menu</string>
    <string name="IconCart">Cart</string>
    <string name="IconOrder">Order</string>
    <string name="IconLogout">Sign out</string>
</resources>